force-app/main/default/objects/Commission_Line__c/fields/Client_Company__c.field-meta.xml
<CustomField>
    <fullName>Client_Company__c</fullName>
    <formula>HYPERLINK(
    &quot;/&quot; &amp; Policy_Number__r.Company__c,
    Policy_Number__r.Company__r.Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Company</label>
    <type>Text</type>
</CustomField>