force-app/main/default/objects/Commission_Line__c/fields/Commission_Date__c.field-meta.xml
<CustomField>
    <fullName>Commission_Date__c</fullName>
    <description>Commission date from the file row.</description>
    <inlineHelpText>When the commission was applied or effective.</inlineHelpText>
    <label>Commission Date</label>
    <type>Date</type>
</CustomField>