force-app/main/default/objects/Commission_Line__c/fields/Commission_Statement__c.field-meta.xml
<CustomField>
    <fullName>Commission_Statement__c</fullName>
    <description>Parent statement that owns this transaction line.</description>
    <inlineHelpText>Determines rollups, sharing, and lifecycle.</inlineHelpText>
    <label>Commission Statement</label>
    <referenceTo>Commission_Statement__c</referenceTo>
    <relationshipLabel>Commission Lines</relationshipLabel>
    <relationshipName>Commission_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>