force-app/main/default/objects/Commission_Line__c/fields/Commnission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commnission_Amount__c</fullName>
    <description>Commission amount for this line.</description>
    <inlineHelpText>Positive for payments; negative for chargebacks/adjustments.</inlineHelpText>
    <label>Commnission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>