force-app/main/default/objects/Commission_Line__c/fields/Coverage_Period__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Period__c</fullName>
    <formula>TEXT(Coverage_Period_Start_Date__c) &amp; &quot; – &quot; &amp; TEXT(Coverage_Period_End_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coverage Period</label>
    <type>Text</type>
</CustomField>