force-app/main/default/objects/Commission_Line__c/fields/Coverage_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Period_End_Date__c</fullName>
    <description>The end date of the coverage period associated with this commission line.</description>
    <inlineHelpText>Specifies the last day the policy coverage applies to this commission line. Used for commission calculation, proration, and reporting.</inlineHelpText>
    <label>Coverage Period End Date</label>
    <type>Date</type>
</CustomField>