force-app/main/default/objects/Commission_Line__c/fields/Coverage_Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Period_Start_Date__c</fullName>
    <description>The start date of the coverage period associated with this commission line.</description>
    <inlineHelpText>Specifies the first day the policy coverage is effective for this commission line. Used for commission calculation, proration, and reporting.</inlineHelpText>
    <label>Coverage Period Start Date</label>
    <type>Date</type>
</CustomField>