force-app/main/default/objects/Commission_Line__c/fields/Matched__c.field-meta.xml
<CustomField>
    <fullName>Matched__c</fullName>
    <description>Indicates whether a Policy Number is associated with this record. The checkbox is automatically selected when the Policy_Number__c lookup field is populated.</description>
    <formula>NOT(ISBLANK(Policy_Number__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically checked when a Policy Number is linked to this record. This field is system-calculated and cannot be edited manually.</inlineHelpText>
    <label>Matched?</label>
    <type>Checkbox</type>
</CustomField>