force-app/main/default/objects/Commission_Line__c/fields/Paid_Out__c.field-meta.xml
<CustomField>
    <fullName>Paid_Out__c</fullName>
    <description>Checked when this line carries a payout, which is what makes it paid. Purely derived from the Payout lookup so it can never disagree with it.</description>
    <formula>NOT( ISBLANK(Payout__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>지급 기록이 연결되어 있으면 자동으로 체크됩니다. 직접 수정할 수 없습니다.</inlineHelpText>
    <label>Paid Out</label>
    <type>Checkbox</type>
</CustomField>