force-app/main/default/objects/Commission_Line__c/fields/Plan_Type_Imported__c.field-meta.xml
<CustomField>
    <fullName>Plan_Type_Imported__c</fullName>
    <description>Captures the plan type value exactly as provided in the carrier’s commission CSV file. This field is populated only during CSV imports and is used to classify the commission line according to the carrier’s plan or product naming conventions.</description>
    <inlineHelpText>This field shows the plan type from the commission CSV upload. It reflects the carrier’s terminology and may differ from Salesforce’s internal plan or product labels. Use it to confirm that the commission line is associated with the correct plan as reported by the carrier.</inlineHelpText>
    <label>Plan Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>