force-app/main/default/objects/Commission_Line__c/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Policy record (if known) this commission belongs to.</description>
    <inlineHelpText>Link to the policy to enable policy-level reporting.</inlineHelpText>
    <label>Policy Number</label>
    <referenceTo>Insurance__c</referenceTo>
    <relationshipLabel>Commission Lines</relationshipLabel>
    <relationshipName>Commission_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>