force-app/main/default/objects/Commission_Line__c/fields/Policy_Number_Imported__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number_Imported__c</fullName>
    <description>Holds the policy number exactly as supplied in the carrier’s commission CSV file. This field is populated only through CSV imports and is used to reconcile imported commission amounts with existing policy records in Salesforce.</description>
    <inlineHelpText>This policy number comes directly from the uploaded commission CSV file. Use it to confirm that the commission entry matches the correct policy. The value may not match internal formats if the carrier uses a different numbering convention.</inlineHelpText>
    <label>Policy Number(Imported)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>