force-app/main/default/objects/Commission_Line__c/fields/Rate_Missing__c.field-meta.xml
<CustomField>
    <fullName>Rate_Missing__c</fullName>
    <description>Checked when the policy has a subagent but no commission rate, so the payable amount cannot be computed. These lines still have to be paid, just with an amount entered by hand.</description>
    <formula>AND(
  NOT( ISBLANK(Policy_Number__r.Subagent__c) ),
  ISBLANK(Policy_Number__r.Commission_Rate__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>서브에이전트는 있는데 폴리시에 Commission Rate가 없는 라인입니다. 지급액을 직접 입력해야 합니다.</inlineHelpText>
    <label>Rate Missing</label>
    <type>Checkbox</type>
</CustomField>