force-app/main/default/objects/Commission_Line__c/fields/Subgent_For_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Subgent_For_Insurance__c</fullName>
    <description>Formula field that renders a hyperlink to the Subagent’s Account record based on the related Policy. Used for quick navigation and reporting.</description>
    <formula>IF(
!ISBLANK(Policy_Number__r.Subagent__c),
HYPERLINK(
&apos;/lightning/r/Account/&apos; &amp; Policy_Number__r.Subagent__c &amp; &apos;/view&apos;,
Policy_Number__r.Subagent__r.FirstName &amp; &apos; &apos; &amp; Policy_Number__r.Subagent__r.LastName
)
,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is system-generated and read-only. It builds a Lightning record link using the Subagent referenced on the related Policy. No value is shown when the Subagent is blank.</inlineHelpText>
    <label>Subgent For Insurance</label>
    <type>Text</type>
</CustomField>