force-app/main/default/objects/Commission_Line__c/validationRules/Coverage_End_Date_must_be_on_After.validationRule-meta.xml
<ValidationRule>
    <fullName>Coverage_End_Date_must_be_on_After</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Coverage_Period_Start_Date__c)),
    NOT(ISBLANK(Coverage_Period_End_Date__c)),
    Coverage_Period_End_Date__c &lt; Coverage_Period_Start_Date__c
)</errorConditionFormula>
    <errorMessage>Coverage Period End Date must be on or after the Coverage Period Start Date.</errorMessage>
</ValidationRule>