force-app/main/default/objects/Commission_Line__c/listViews/Unpaid_Subagent_Lines.listView-meta.xml
<ListView>
    <fullName>Unpaid_Subagent_Lines</fullName>
    <columns>NAME</columns>
    <columns>Commission_Statement__c</columns>
    <columns>Payment_Period__c</columns>
    <columns>Policy_Number__c</columns>
    <columns>Commission_Amount__c</columns>
    <columns>Commission_Rate__c</columns>
    <columns>Payable_Amount__c</columns>
    <columns>Rate_Missing__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Paid_Out__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Subagent_For_Insurance__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Unpaid Subagent Lines</label>
</ListView>